Stop overflows from messing up section scaling

--- a/styles/style.css
+++ b/styles/style.css
@@ -61,6 +61,7 @@ section {
     background-color: white;
     box-shadow: var(--shadow);
     border-style: solid;
+    overflow: hidden;
 }
 
 footer {
